tests/snapshots/messages__type9_airborne_known_position.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,91mg=5Eo3rPBor@N0wh<CWP04000,0*25\")"
---
SarAircraftPositionReport(
    SarAircraftPositionReport {
        message_type: 9,
        repeat_indicator: 0,
        mmsi: 123456789,
        altitude: Some(
            1500,
        ),
        speed_over_ground: Some(
            250,
        ),
        position_accuracy: Dgps,
        longitude: Some(
            4.123,
        ),
        latitude: Some(
            52.456,
        ),
        course_over_ground: Some(
            315.0,
        ),
        timestamp: 30,
        regional: 0,
        dte: false,
        assigned: false,
        raim: true,
        radio: Sotdma(
            SotdmaMessage {
                sync_state: UtcDirect,
                slot_timeout: 0,
                sub_message: SlotOffset(
                    0,
                ),
            },
        ),
    },
)
